[project]
name = "coolstuff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.4",
    "psycopg[binary]>=3.2.12",
    "sqlalchemy>=2.0.44",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.1.3",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.18",
    "email-validator>=2.1.0",
]
